# acsic

./: CMakeLists.txt  main.cpp  main.qml  main.qrc
components/: LeftPanel.qml  RightPanel.qml
